# nix-cargo-unit

./: CLAUDE.md  Cargo.toml  README.md  flake.nix  test_proc2
.claude/loop/nix-cargo-unit/: knowledge.md  state.yaml
.claude/notes/: rustc-transitive-dep-resolution.md
dep-repro/: Cargo.toml  flake.nix
dep-repro/my-macro/: Cargo.toml
dep-repro/my-macro/src/: lib.rs
dep-repro/shared-lib/: Cargo.toml
dep-repro/shared-lib/src/: lib.rs
dep-repro/src/: lib.rs  main.rs
docs/: design.md
examples/tonic-proto/: Cargo.toml  build.rs  flake.nix  units-nix-result
examples/tonic-proto/src/: main.rs
examples/workspace/: Cargo.toml  README.md  flake.nix  result-units
examples/workspace/crates/app/: Cargo.toml  build.rs
examples/workspace/crates/app/src/: main.rs
examples/workspace/crates/core/: Cargo.toml  build.rs
examples/workspace/crates/core/src/: lib.rs
examples/workspace/crates/macros/: Cargo.toml
examples/workspace/crates/macros/src/: lib.rs
issues/: 001-ca-derivation-output-permission.md  template.md
issues/002-duplicate-deps/: README.md
lto-repro/: Cargo.toml  flake.nix
lto-repro/src/: lib.rs
nix/: dynamic.nix  lib.nix
pest-repro/: Cargo.toml
pest-repro/src/: grammar.pest  lib.rs
src/: build_script.rs  lib.rs  main.rs  nix_gen.rs  proc_macro.rs  rustc_flags.rs  shell.rs  source_filter.rs  unit_graph.rs
tests/: integration.rs
