[package]
name = "nix-cargo-unit"
version = "0.1.0"
edition = "2024"
description = "Per-unit incremental Rust compilation in Nix using cargo --unit-graph"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
