[package]
name = "my-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
# Proc macro depends on shared-lib with feature-a
shared-lib = { path = "../shared-lib", features = ["feature-a"] }
# serde WITHOUT rc feature (creates feature divergence with main crate)
serde = { version = "1.0", features = ["derive"] }
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
